@@ -50,6 +50,8 @@ import lucee.commons.lang.ExceptionUtil;
 import lucee.commons.lang.SizeOf;
 import lucee.commons.lang.StringUtil;
 import lucee.loader.engine.CFMLEngine;
+import lucee.runtime.config.ConfigServer;
+import lucee.runtime.config.ConfigServerImpl;
 import lucee.runtime.config.ConfigWeb;
 import lucee.runtime.config.ConfigWebPro;
 import lucee.runtime.config.Constants;
@@ -79,6 +81,10 @@ import lucee.runtime.type.util.ListUtil;
  */
 public final class CFMLFactoryImpl extends CFMLFactory {
 
+	private static final int MAX_NORMAL_PRIORITY = 0;
+	private static final int MAX_NO_SLEEP = 10;
+	private static final int SLEEP_TIME = 100;
+
 	private static final long MAX_AGE = 5 * 60000; // 5 minutes
 	private static final int MAX_SIZE = 10000;
 	private static JspEngineInfo info = new JspEngineInfoImpl("1.0");
@@ -87,7 +93,6 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 	private final Map<Integer, PageContextImpl> runningPcs = new ConcurrentHashMap<Integer, PageContextImpl>();
 	private final Map<Integer, PageContextImpl> runningChildPcs = new ConcurrentHashMap<Integer, PageContextImpl>();
 
-	int idCounter = 1;
 	private ScopeContext scopeContext = new ScopeContext(this);
 	private HttpServlet _servlet;
 	private URL url = null;
@@ -98,6 +103,7 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 	private float memoryThreshold;
 	private float cpuThreshold;
 	private int concurrentReqThreshold;
+	private ConfigServerImpl configServer;
 
 	public CFMLFactoryImpl(CFMLEngineImpl engine, ServletConfig sg) {
 		this.engine = engine;
@@ -168,8 +174,54 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 	public PageContextImpl getPageContextImpl(HttpServlet servlet, HttpServletRequest req, HttpServletResponse rsp, String errorPageURL, boolean needsSession, int bufferSize,
 			boolean autoflush, boolean register2Thread, boolean isChild, long timeout, boolean register2RunningThreads, boolean ignoreScopes, boolean createNew,
 			PageContextImpl tmplPC) {
-		PageContextImpl pc;
 
+		if (!isChild) {
+			String ra = req.getRemoteAddr();
+			String tmp;
+			if (ra != null) {
+				boolean resetToNormPrio = true;
+				int count = 0;
+				for (PageContextImpl opc: runningPcs.values()) {
+					if (opc != null) {
+						HttpServletRequest tmpReq = opc.getHttpServletRequest();
+						if (tmpReq != null) {
+							tmp = tmpReq.getRemoteAddr();
+							if (ra.equals(tmp)) count++;
+						}
+					}
+				}
+				// has already running requests?
+				if (count > 0) {
+
+					// reached max amount of request for norm prio
+					int maxNormPrio = Caster.toIntValue(SystemUtil.getSystemPropOrEnvVar("lucee.request.limit.concurrent.maxnormprio", null), MAX_NORMAL_PRIORITY);
+					if (maxNormPrio > 0 && count >= maxNormPrio) {
+						for (PageContextImpl opc: runningPcs.values()) {
+							if (opc != null) {
+								Thread t = opc.getThread();
+								if (t != null) {
+									t.setPriority(Thread.MIN_PRIORITY);
+								}
+							}
+						}
+						Thread.currentThread().setPriority(Thread.MIN_PRIORITY);
+						resetToNormPrio = false;
+					}
+
+					// reached max amount of request allowed in without a nap
+					int maxNoSleep = Caster.toIntValue(SystemUtil.getSystemPropOrEnvVar("lucee.request.limit.concurrent.maxnosleep", null), MAX_NO_SLEEP);
+					if (maxNoSleep > 0 && count >= maxNoSleep) {
+						int ms = Caster.toIntValue(SystemUtil.getSystemPropOrEnvVar("lucee.request.limit.concurrent.sleeptime", null), SLEEP_TIME);
+						if (ms > 0) {
+							SystemUtil.sleep(ms);
+						}
+					}
+				}
+				if (resetToNormPrio && Thread.currentThread().getPriority() != Thread.NORM_PRIORITY) Thread.currentThread().setPriority(Thread.NORM_PRIORITY);
+			}
+		}
+
+		PageContextImpl pc;
 		if (createNew || pcs.isEmpty()) {
 			pc = null;
 		}
@@ -181,7 +233,7 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 				pc = null;
 			}
 		}
-		if (pc == null) pc = new PageContextImpl(scopeContext, config, idCounter++, servlet, ignoreScopes);
+		if (pc == null) pc = new PageContextImpl(scopeContext, config, servlet, ignoreScopes);
 
 		if (timeout > 0) pc.setRequestTimeout(timeout);
 		if (register2RunningThreads) {
@@ -230,13 +282,14 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 			ThreadLocalPageContext.register(pc);
 			tmpRegister = true;
 		}
-		boolean releaseFailed = false;
+		boolean reuse = true;
 		try {
+			reuse = !pc.hasFamily(); // we do not recycle when still referenced by child threads
 			pc.release();
 		}
 		catch (Exception e) {
-			releaseFailed = true;
-			config.getLog("application").error("release page context", e);
+			reuse = false;
+			ThreadLocalPageContext.getLog(config, "application").error("release page context", e);
 		}
 		if (tmpRegister) ThreadLocalPageContext.register(beforePC);
 		if (unregisterFromThread) ThreadLocalPageContext.release();
@@ -245,7 +298,7 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 		if (isChild) {
 			runningChildPcs.remove(Integer.valueOf(pc.getId()));
 		}
-		if (pcs.size() < 100 && ((PageContextImpl) pc).getTimeoutStackTrace() == null && !releaseFailed)// not more than 100 PCs
+		if (pcs.size() < 100 && ((PageContextImpl) pc).getTimeoutStackTrace() == null && reuse)// not more than 100 PCs
 			pcs.push((PageContextImpl) pc);
 
 		if (runningPcs.size() > MAX_SIZE) clean(runningPcs);
@@ -290,7 +343,7 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 				long timeout = pc.getRequestTimeout();
 				// reached timeout
 				if (pc.getStartTime() + timeout < System.currentTimeMillis() && Long.MAX_VALUE != timeout) {
-					Log log = pc.getConfig().getLog("requesttimeout");
+					Log log = ThreadLocalPageContext.getLog(pc, "requesttimeout");
 					if (reachedConcurrentReqThreshold() && reachedMemoryThreshold() && reachedCPUThreshold()) {
 						if (log != null) {
 							PageContext root = pc.getRootPageContext();
@@ -316,7 +369,7 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 				}
 				// after 10 seconds downgrade priority of the thread
 				else if (pc.getStartTime() + 10000 < System.currentTimeMillis() && pc.getThread().getPriority() != Thread.MIN_PRIORITY) {
-					Log log = pc.getConfig().getLog("requesttimeout");
+					Log log = ThreadLocalPageContext.getLog(pc, "requesttimeout");
 					if (log != null) {
 						PageContext root = pc.getRootPageContext();
 						log.log(Log.LEVEL_INFO, "controller", "downgrade priority of the a " + (root != null && root != pc ? "thread" : "request") + " at " + getPath(pc) + ". "
@@ -402,6 +455,10 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 		return config;
 	}
 
+	public ConfigServer getConfigServer() {
+		return configServer;
+	}
+
 	/**
 	 * @return Returns the scopeContext.
 	 */
@@ -443,7 +500,8 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 		return _servlet;
 	}
 
-	public void setConfig(ConfigWebPro config) {
+	public void setConfig(ConfigServerImpl configServer, ConfigWebPro config) {
+		this.configServer = configServer;
 		this.config = config;
 	}
 
@@ -492,7 +550,7 @@ public final class CFMLFactoryImpl extends CFMLFactory {
 
 			data.setEL("startTime", new DateTimeImpl(pc.getStartTime(), false));
 			data.setEL("endTime", new DateTimeImpl(pc.getStartTime() + pc.getRequestTimeout(), false));
-			data.setEL(KeyConstants._timeout, new Double(pc.getRequestTimeout()));
+			data.setEL(KeyConstants._timeout, Double.valueOf(pc.getRequestTimeout()));
 
 			// thread
 			sctThread.setEL(KeyConstants._name, thread.getName());
