@@ -363,7 +363,7 @@ public final class XMLConverter extends ConverterSupport {
 		}
 		// Number
 		if (object instanceof Number) {
-			rtn = goIn() + ((Number) object).doubleValue();
+			rtn = goIn() + Caster.toString((Number) object);
 			deep--;
 			type = "NUMBER";
 			return rtn;
@@ -493,7 +493,7 @@ public final class XMLConverter extends ConverterSupport {
 		else if (nodeName.equals("number")) {
 			try {
 				Node data = element.getFirstChild();
-				if (data == null) return new Double(0);
+				if (data == null) return Double.valueOf(0);
 				return Caster.toDouble(data.getNodeValue());
 			}
 			catch (Exception e) {
