@@ -54,7 +54,15 @@ public abstract class CFMLSpoolerTaskListener extends SpoolerTaskListener {
 			args.set("created", new DateTimeImpl(pc, task.getCreation(), true));
 			args.set(KeyConstants._id, task.getId());
 			args.set(KeyConstants._type, task.getType());
-			args.set(KeyConstants._detail, task.detail());
+
+			Struct details = task.detail();
+			if (task instanceof MailSpoolerTask) {
+				details.set(KeyConstants._charset, ((MailSpoolerTask) task).getCharset());
+				details.set(KeyConstants._replyto, ((MailSpoolerTask) task).getReplyTos());
+				details.set("failto", ((MailSpoolerTask) task).getFailTos());
+			}
+			args.set(KeyConstants._detail, details);
+
 			args.set(KeyConstants._tries, task.tries());
 			args.set("remainingtries", e == null ? 0 : task.getPlans().length - task.tries());
 			args.set("closed", task.closed());
@@ -64,7 +72,7 @@ public abstract class CFMLSpoolerTaskListener extends SpoolerTaskListener {
 			Struct curr = new StructImpl();
 			args.set("caller", curr);
 			curr.set("template", currTemplate.template);
-			curr.set("line", new Double(currTemplate.line));
+			curr.set("line", Double.valueOf(currTemplate.line));
 
 			Struct adv = new StructImpl();
 			args.set("advanced", adv);
@@ -78,7 +86,7 @@ public abstract class CFMLSpoolerTaskListener extends SpoolerTaskListener {
 
 		}
 		catch (Exception pe) {
-			LogUtil.log(ThreadLocalPageContext.getConfig(), CFMLSpoolerTaskListener.class.getName(), e);
+			LogUtil.log(ThreadLocalPageContext.get(), CFMLSpoolerTaskListener.class.getName(), pe);
 		}
 		finally {
 			if (pcCreated) ThreadLocalPageContext.release();
