@@ -75,7 +75,7 @@ public final class Stopwatch extends BodyTagImpl {
 		long exe = (System.currentTimeMillis() - time);
 
 		if (variable != null) {
-			pageContext.setVariable(variable, new Double(exe));
+			pageContext.setVariable(variable, Double.valueOf(exe));
 		}
 		else {
 			DumpTable table = new DumpTable("#ff9900", "#ffcc00", "#000000");
@@ -85,7 +85,8 @@ public final class Stopwatch extends BodyTagImpl {
 
 				pageContext.forceWrite(writer.toString(pageContext, table, true));
 			}
-			catch (IOException e) {}
+			catch (IOException e) {
+			}
 		}
 		return EVAL_PAGE;
 	}
